# fsyncer

./: .git_ignore  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  errors.txt  fsops.rs  rustfmt.toml
client/: .clang_complete  Cargo.toml  build.rs  decode.c  decode.h  fdmap.c  fdmap.h  fdmap.rs  main.c
common/: Cargo.toml  build.rs  fscompare.c  fscompare_main.c  fsops.c  uvarint.c
doc/: flush sync perf.txt  flush_sync.ods  hdd.txt  mirror.c  parallelise replication.txt  windows_port.md
dokan/: Cargo.toml  build.rs  helper.c
fs/: Cargo.toml  build.rs  fsyncer.h  main.c  read.c  write.c
fsyncd/: .clang_complete  Cargo.toml  build.rs  codec.h  config.h  decode.c  defs.h  dokan_main.c  fscompare.c  fsops.c  fsops.h  fsyncd.profile  fsyncer.h  main.c  read.c  read_windows.c  test.fj  windows.c  write.c  write_windows.c
fsyncd/src/: client.rs  common.rs  dispatch.rs  encoded.rs  error.rs  fuseops.rs  lib.rs  main.rs  ops.rs  server.rs  write.rs
fsyncd/src/client/: dispatch.rs  dispatch_unix.rs  dispatch_windows.rs  mod.rs
fsyncd/src/common/: encoded.rs  ffi.rs  file_security.rs  journal.rs  log.rs  logstore.rs  mod.rs  ops.rs  ops_unix.rs  ops_windows.rs  rsync.rs  security_unix.rs  security_windows.rs
fsyncd/src/fuse_hl/: fuseops.rs  mod.rs  read_unix.rs  write_unix.rs
fsyncd/src/fuse_ll/: mod.rs
fsyncd/src/journal/: bilog.rs  filestore.rs  forward.rs  mdata.rs  mod.rs  snapshot.rs  store.rs  viewer.rs
fsyncd/src/server/: client.rs  fusemain.rs  fuseops.rs  mod.rs  net.rs  read.rs  read_unix.rs  write.rs  write_unix.rs  write_windows.rs
fsyncd/src/snapshot/: forward.rs  mod.rs
fuse/: Cargo.toml  bindings.rs  build.rs  (+1 more)
(+132 files in other folders)
