[package]
name = "fsyncd"
version = "0.1.0"
authors = ["Denis Lavrov <bahus.vel@gmail.com>"]
build = "build.rs"

[features]
profile = ["cpuprofiler", "nix" ]

[target.'cfg(windows)'.dependencies]
dokan = { path = "../dokan" }
winapi = { version = "0.3.6", features = ["securitybaseapi", "aclapi", "sddl", "winuser"] }

[dependencies]
net2 = "0.2"
lazy_static = "1.2.0"
clap = "2.33.0"
zstd = "0.4.14"
dssc = { path = "../dssc" }
iolimit = { path = "../iolimit" }
bitflags = "1.0.1"
walkdir = "2.0.1"
futures = "0.1.18"
lz4 = "1.23.0"
bincode = "1.1.2"
serde = "1.0.80"
serde_derive = "1.0.80"
errno = "0.2.4"
byteorder = "1.2.7"
crc = "1.8.1"
regex = "1.1.0"
libc = "0.2.45"
either = "1.5.0"
chrono = "0.4.6"
threadpool = "1.7.1"
cpuprofiler = { version="0.0.3", optional=true }
nix = { version="0.11.0", optional=true }

[build-dependencies]
cc = "1.0"
git-version = "0.2.1"